--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,25 +1,35 @@
 ---
 driver_plugin: vagrant
+
 driver_config:
-  require_chef_omnibus: '11.6'
+  require_chef_omnibus: true
+  customize:
+    cpus: 1
+    memory: 512
+  ssh:
+    insert_key: false
+
+provisioner:
+  name: chef_zero
+  always_update_cookbooks: true
 
 platforms:
-- name: centos-6.5
+- name: centos-6.8
   run_list: ['recipe[yum-epel]']
   driver_config:
-    box: opscode-centos-6.5
-    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-14.04_chef-provisionerless.box
-    customize:
-      cpus: 2
-      memory: 1024
+    box: bento/centos-6.8
+- name: centos-7.2
+  run_list: ['recipe[yum-epel]']
+  driver_config:
+    box: bento/centos-7.2
 - name: ubuntu-14.04
   run_list: ['recipe[apt]']
   driver_config:
-    box: opscode-ubuntu-14.04
-    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.5_chef-provisionerless.box
-    customize:
-      cpus: 2
-      memory: 1024
+    box: bento/ubuntu-14.04
+- name: ubuntu-16.04
+  run_list: ['recipe[apt]']
+  driver_config:
+    box: bento/ubuntu-16.04
 
 suites:
 - name: default
@@ -31,53 +41,27 @@ suites:
       provider: 'vagrant'
       public_ips: ['100.64.1.1']
       private_ips: ['10.0.2.15']
+    rsc_ros:
+      provider: AWS
+      access_key: <%= ENV['AWS_ACCESS_KEY'] %>
+      secret_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
+      bucket: cdw-demo
+      file: sample/sample.war
+      destination: /opt/tomcat/webapps
+      region: us-east-1
     rsc_tomcat:
-      application_name: 'example'
+      application_name: 'sample'
       listen_port: '8080'
       bind_network_interface: 'private'
       vhost_path: 'www.example.com'
-      war:
-        path: 'https://tomcat.apache.org/tomcat-6.0-doc/appdev/sample/sample.war'
-      java: 
+      java:
         version: '8'
         flavor: 'oracle'
       database:
         provider:  'mysql'
         host: 'db1.example.com'
         user: 'app_user'
-        password: 'apppass'
-        schema: 'app_test'
-    rightscale:
-      instance_uuid: '1111111'
-      
-- name: tar_install
-  run_list:
-  - recipe[rsc_tomcat::default]
-  - recipe[rsc_tomcat::tags]
-  attributes:
-    cloud:
-      provider: 'vagrant'
-      public_ips: ['100.64.1.1']
-      private_ips: ['10.0.2.15']
-    tomcat:
-      base_version: '7'
-      install_method: 'tar'
-      tar_version: '7.0.65'
-    rsc_tomcat:
-      application_name: 'example'
-      listen_port: '8080'
-      bind_network_interface: 'private'
-      vhost_path: 'www.example.com'
-      war:
-        path: 'https://tomcat.apache.org/tomcat-6.0-doc/appdev/sample/sample.war'
-      java: 
-        version: '7'
-        flavor: 'oracle'
-      database:
-        provider:  'mysql'
-        host: 'db1.example.com'
-        user: 'app_user'
-        password: 'apppass'
+        password: 'app_pass'
         schema: 'app_test'
     rightscale:
       instance_uuid: '1111111'
