Added maxthreads as an input to cookbook (#11)
* added maxThreads to server.xml

* added maxThreads to readme and changelog

* updated example with missing quote

* removed an extra apostrophe

* updated maxThread word

* fixed space issue

* renamed variable maxthread

* fix maxThreads variable

* renmed variable to maxiumthreads

* udpated max_threads name

* fixed typo

* updated to use node name

* updated rsc_tomcat from 2.0.0 to 2.0.1

* added max_threads

* fixed indentation issues

* removed machine_tag,rightscale_tag, and marker

* removed the 3rd number after the dot

* added server.xml

* added max_threads

* changed verify to converge

* updated license with - in metadata

* added ubuntu and centos for supports

* added license file

* ignore rule FC072

* added rs_rll_port

* added monitoring_collector_http = localhost

* fixed quotes and removed =

* adding attributes to .kitchen.dokkend and fixign tests

* adding in seets

--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -102,6 +102,7 @@ suites:
       listen_port: '8080'
       bind_network_interface: 'private'
       vhost_path: 'www.example.com'
+      max_threads: '400'
       java:
         version: '8'
         flavor: 'oracle'
@@ -113,3 +114,5 @@ suites:
         schema: 'app_test'
     rightscale:
       instance_uuid: '1111111'
+      RS_RLL_PORT: '12345'
+      monitoring_collector_http: 'localhost'
